Add PC implementation to current series

--- a/net/ipv4/Kconfig
+++ b/net/ipv4/Kconfig
@@ -755,3 +755,10 @@ config TCP_MD5SIG
 	  on the Internet.
 
 	  If unsure, say N.
+
+config PACED_CHIRPING
+       bool
+       select SKB_EXTENSIONS
+       default y
+       help
+       Includes Paced Chirping code into the kernel.
